# visual-slam

./: LICENSE  README.md
3-opencv/stereo/: CMakeLists.txt
Basic/math/04-ImageProcessing/: CMakeLists.txt
Basic/math/04-ImageProcessing/BasicImage/: CMakeLists.txt  imageBasic.cpp  undistortImg.cpp
Basic/math/04-ImageProcessing/rgbd/: CMakeLists.txt  rgbdMap.cpp
Basic/math/04-ImageProcessing/stereo/: CMakeLists.txt  stereoImage.cpp
Basic/math/05-Optimization/: CMakeLists.txt  ceresCurveFitting.cpp  function.h  g2oCurveFitting.cpp  gaussNewton.cpp  gtsamCurveFitting.cpp
Basic/math/06-PoseEstimation/: CMakeLists.txt  imageMatching.cpp  poseEstimation2d2d.cpp  tictoc.h
Basic/math/3D-Coordinate/: CMakeLists.txt  coordinateTransform.cpp  eigenMatrix.cpp
Basic/math/EvaluateError/: CMakeLists.txt
Basic/math/SophusExample/: CMakeLists.txt  useSophus.cpp
Factor-Graph/gtsam_tutorial/IMUFactor/: CMakeLists.txt
Factor-Graph/gtsam_tutorial/IMUFactor/data/: result.csv
Factor-Graph/gtsam_tutorial/IMUFactor/src/: main.cpp
Factor-Graph/gtsam_tutorial/IMUKittiExampleGPS/: CMakeLists.txt
Factor-Graph/gtsam_tutorial/IMUKittiExampleGPS/data/: IMUKittiExampleGPSResults.csv  visualize_results.m
Factor-Graph/gtsam_tutorial/SfM_GTSAM/: CMakeLists.txt  main.cpp
Factor-Graph/gtsam_tutorial/handeyecalibration/: CMakeLists.txt
Factor-Graph/gtsam_tutorial/handeyecalibration/data/: lo_kf_pose.csv
RGB-D-SLAM-Tutorial/RGBD-2/: CMakeLists.txt  README.md  main.cpp
RGB-D-SLAM-Tutorial/RGBD-3/: CMakeLists.txt
RGB-D-SLAM-Tutorial/RGBD-3/include/: slamBase.h
RGB-D-SLAM-Tutorial/RGBD-3/src/: detectFeatures.cpp  main.cpp
RGB-D-SLAM-Tutorial/RGBD-4/: CMakeLists.txt  parameters.txt
RGB-D-SLAM-Tutorial/RGBD-4/include/: slamBase.h
RGB-D-SLAM-Tutorial/RGBD-4/src/: slamBase.cpp
RGB-D-SLAM-Tutorial/RGBD-5/: CMakeLists.txt  parameters.txt
RGB-D-SLAM-Tutorial/RGBD-5/include/: slamBase.h
RGB-D-SLAM-Tutorial/RGBD-7/: CMakeLists.txt
RGB-D-SLAM-Tutorial/RGBD-7/cmake/: FindCSparse.cmake  FindG2O.cmake
RGB-D-SLAM-Tutorial/RGBD-7/include/: slamBase.h
RGB-D-SLAM-Tutorial/RGBD-7/src/: main.cpp  slamBase.cpp
SLAM-Framework/rvio/rvio_estimator/: CMakeLists.txt  package.xml
SLAM-Framework/rvio/rvio_estimator/src/: rvio_node.cpp
SLAM-Theory/2-sophus/example/: CMakeLists.txt
SLAM-Theory/3-opencv/rgbd/: CMakeLists.txt
SLAM-Theory/4-ceres/ceres/: CMakeLists.txt  ceres-example.cpp
SfM/: .gitignore  CMakeLists.txt  README.md
SfM/3dv_tutorial/: HOWTO_RUN.md  LICENSE  README.md
SfM/3dv_tutorial/msvs/: 3dv_tutorial.sln
SfM/3dv_tutorial/msvs/bundle_adjustment_global/: bundle_adjustment_global.vcxproj
SfM/3dv_tutorial/msvs/bundle_adjustment_inc/: bundle_adjustment_inc.vcxproj
SfM/3dv_tutorial/msvs/camera_calibration/: camera_calibration.vcxproj
SfM/3dv_tutorial/msvs/distortion_correction/: distortion_correction.vcxproj
SfM/3dv_tutorial/msvs/image_formation/: image_formation.vcxproj
SfM/3dv_tutorial/msvs/image_stitching/: image_stitching.vcxproj
SfM/3dv_tutorial/msvs/line_fitting_m_est/: line_fitting_m_est.vcxproj
SfM/3dv_tutorial/msvs/line_fitting_ransac/: line_fitting_ransac.vcxproj
SfM/3dv_tutorial/msvs/object_localization/: object_localization.vcxproj
SfM/3dv_tutorial/msvs/perspective_correction/: perspective_correction.vcxproj
SfM/3dv_tutorial/msvs/pose_estimation_book1/: pose_estimation_book1.vcxproj
SfM/3dv_tutorial/msvs/pose_estimation_book2/: pose_estimation_book2.vcxproj
SfM/3dv_tutorial/msvs/pose_estimation_book3/: pose_estimation_book3.vcxproj
SfM/3dv_tutorial/msvs/pose_estimation_chessboard/: pose_estimation_chessboard.vcxproj
SfM/3dv_tutorial/msvs/sfm_global/: sfm_global.vcxproj
SfM/3dv_tutorial/msvs/sfm_inc/: sfm_inc.vcxproj
SfM/3dv_tutorial/msvs/triangulation/: triangulation.vcxproj
SfM/3dv_tutorial/msvs/vo_epipolar/: vo_epipolar.vcxproj
SfM/3dv_tutorial/src/: bundle_adjustment.hpp  bundle_adjustment_global.cpp  bundle_adjustment_inc.cpp  camera_calibration.cpp  distortion_correction.cpp  image_formation.cpp  image_stitching.cpp  line_fitting_m_est.cpp  line_fitting_ransac.cpp  object_localization.cpp  perspective_correction.cpp  pose_estimation_book1.cpp  pose_estimation_book2.cpp  pose_estimation_book3.cpp  pose_estimation_chessboard.cpp  sfm.hpp  sfm_global.cpp  sfm_inc.cpp  triangulation.cpp  video_stabilization.cpp  vo_epipolar.cpp
SfM/app/: CheckMatches.cpp  ComputeMatches.cpp  FeatureExtraction.cpp  Reconstruction.cpp
SfM/config/: NEU.yaml  gerrard-hall.yaml  person-hall.yaml  south-building.yaml
SfM/include/Feature/: FeatureExtraction.h  FeatureMatching.h  FeatureUtils.h
SfM/include/Optimizer/: BundleData.h  CeresBundleOptimizer.h
SfM/include/SfM/: Image.h  Initializer.h  Map.h  MapBuilder.h  Point2D.h  Point3D.h  Projection.h  RegisterGraph.h  Registrant.h  SceneGraph.h  Track.h  Triangulator.h
SfM/include/Utils/: Database.h  Exportor.h  OpenMVSInterface.h  Timer.h  Types.h  Utils.h  Visualization.h
SfM/src/Feature/: FeatureExtraction.cpp  FeatureMatching.cpp  FeatureUtils.cpp
SfM/src/Optimizer/: BundleData.cpp  CeresBundleOptimizer.cpp
SfM/src/SfM/: Image.cpp  Initializer.cpp  Map.cpp  MapBuilder.cpp  Point2D.cpp  Point3D.cpp  Projection.cpp  RegisterGraph.cpp  Registrant.cpp  SceneGraph.cpp  Track.cpp  Triangulator.cpp
SfM/src/Utils/: Database.cpp  Exportor.cpp  Timer.cpp  Utils.cpp  Visualization.cpp
ceres/g2o/: CMakeLists.txt
ceres/gaussNewton/: CMakeLists.txt  gaussNewton.cpp
geometry/: CMakeLists.txt  README.md  plotTrajectory.cpp  useEigen.cpp
gtsam_tutorial/FactorTest/: CMakeLists.txt
gtsam_tutorial/FactorTest/Factor_lib/: CMakeLists.txt  LBLFactor.cpp  LBLFactor.h  PointToPlaneFactor.cpp  PointToPlaneFactor2.h  PointToPlaneFactor3.cpp  PointToPlaneFactor3.h
gtsam_tutorial/FactorTest/gtests/: LBLFactorTest.cpp
gtsam_tutorial/linefitting/: CMakeLists.txt
gtsam_tutorial/linefitting/src/: linefitting.cpp
gtsam_tutorial/odometry/: CMakeLists.txt
opencv/image-basics/: CMakeLists.txt  undistortImage.cpp
sophus/: CMakeLists.txt
sophus/example/: README.md  trajectoryError.cpp
(+233 files in other folders)
